recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:5: error: not found: value pentakoch
	pentakoch(levels-1,length*0.4)
        ^